--- a/src/components/css/search-bar.scss
+++ b/src/components/css/search-bar.scss
@@ -1,9 +1,10 @@
 #search-bar{
     width: 100%;
     height:2rem;
-    margin: 0 auto;
+    display: flex;
     .search-input{
         width: 84%;
+        height: 1.5rem;
         background: #fff url('../img/search.png') no-repeat;
         background-size: 1rem;
         background-origin: padding-box;
@@ -12,6 +13,7 @@
         border-radius: 0.25rem;
         padding: 0 1.25rem;
         line-height: 1.5rem;
-        margin:.5rem;
+        margin:.5rem auto;
+        justify-content: center;
     }
 } 
