--- a/src/pages/list/List.scss
+++ b/src/pages/list/List.scss
@@ -6,6 +6,7 @@
         padding-bottom: 1rem;
     }
     .header-searchBar {
+        width: 100%;
         margin-bottom: .5rem ;
     }
     .header-item {
