--- a/src/components/css/auto-swiper.scss
+++ b/src/components/css/auto-swiper.scss
@@ -1,7 +1,7 @@
 #AutoSwiper{
     width: 18.75rem;
     height: 6rem;
-    margin: 2rem auto;
+    margin: 0 auto;
     position: relative;
     overflow: hidden;
     border: .1rem #eee solid;
