--- a/src/components/css/card-item.scss
+++ b/src/components/css/card-item.scss
@@ -1,8 +1,8 @@
 #card-item{
     width: 5.125rem;
     height: 5.125rem;
-    padding: auto 0.25rem;
-    margin: 0.25rem;
+    padding: auto .25rem;
+    margin: .25rem;
     text-align: center;
     display: flex;
     align-items: center;
