--- a/src/components/css/button.scss
+++ b/src/components/css/button.scss
@@ -7,5 +7,6 @@
     line-height: 2.4rem;
     margin: 0 auto;
     font-weight: bold;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
+    padding: .2rem 0;
 }
