--- a/src/components/css/auto-swiper.scss
+++ b/src/components/css/auto-swiper.scss
@@ -1,5 +1,5 @@
 #AutoSwiper{
-    width: 18.75rem;
+    width: 90vw;
     height: 6rem;
     margin: 0 auto;
     position: relative;
@@ -7,7 +7,7 @@
     border: .1rem #eee solid;
     border-radius: .5rem;
     .swiper-content{
-        width: 18.75rem;
+        width: 90vw;
         height: 6rem;
         background-color: #eee; 
         position: absolute;
@@ -20,10 +20,8 @@
         animation-play-state: paused; 
     }
     .swiper-item{
-        width: 18.75rem;
-        height: 6rem;
         img{
-            width: 18.75rem;
+            width: 90vw;
             height: 100%;
         }
     }
@@ -32,10 +30,10 @@
             left: 0;
         }
         40%,60%{
-            left: -18.75rem;
+            left: -100%;
         }
         80%,100%{
-            left: -37.5rem;
+            left: -200%;
         }
     }
     .swiper-nav{
