--- a/src/pages/card/pages/connect-net/css/connectnet.scss
+++ b/src/pages/card/pages/connect-net/css/connectnet.scss
@@ -1,8 +1,46 @@
 #ConnectNet{
+    width: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    background-color: #FAFAFA;
+    overflow-x: hidden;
     .net-body{
         width: 100%;
         background-color: #FF9900;
         color: #fff;
+        padding: 2.4rem 0 1.2rem 0;
+    }
+    .check-wifi{
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        padding-bottom: 1.2rem;
+        img{
+            width: 6rem;
+            height: 6rem;
+        }
+    }
+    .wifi-text{
+        height: 6rem;
+        margin: 0 .5rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .wifi-name{
+        font-size: 1.4rem;
+        line-height: 2rem;
+        font-weight: 500;
+    }
+    .wifi-state{
+        font-size: .9rem;
+        opacity: .8;
+    }
+    .wifi-set{
+        display: flex;
+        justify-content: space-around;
+        font-size: .9rem;
     }
     .input-item{
         width: 100%;
@@ -16,6 +54,26 @@
             border-radius: .5rem;
             margin: 0 .5rem;
         }
-
     }
+    .select-item{
+        text-align: center;
+        span{
+            margin: .8rem 2rem;
+        }
+    }
+    .net-footer{
+        width: 100%;
+        margin: 1rem 0;
+    }
+    .net-footer-card{
+        width: 90%;
+        height: 2rem;
+        display: flex;
+        justify-content: space-around;
+        margin: 1rem auto;
+        padding: .5rem;
+        background-color: #fff;
+        border-radius: .5rem;
+    }
+ 
 }
