--- a/src/components/css/pull-down-menu.scss
+++ b/src/components/css/pull-down-menu.scss
@@ -1,45 +1,49 @@
-#PullDownMenu{
-    .menu-box{
+#PullDownMenu {
+    .menu-box {
         width: 100%;
         height: 4rem;
         overflow: hidden;
         transition: all 0.4s ease;
     }
-    .normal-item{
+
+    .normal-item {
         display: flex;
-        justify-content: space-around;
         height: 2rem;
         align-items: center;
         margin: .5rem 0;
         background-color: #fff;
-        padding: .5rem 0;
+        padding: .5rem 1.5rem;
     }
-    .select-way-img{
+
+    .select-way-img {
         width: 11.5rem;
         text-align: end;
         margin-right: -1rem;
         display: flex;
+        flex: 1;
         flex-direction: row-reverse;
         align-items: center;
-        img{
+
+        img {
             width: 1rem;
             height: 1rem;
             transition: all .5s ease;
             margin: 0 .4rem;
         }
     }
-    .select-way-content{
+
+    .select-way-content {
         width: 100%;
         margin-top: -.5rem;
-        background-color: #FAFAFA;  
+        background-color: #FAFAFA;
     }
 
-    .select-way-item{
-        padding-right:1rem ;
+    .select-way-item {
+        padding-right: 1rem;
         height: 2.35rem;
         line-height: 2.35rem;
         text-align: end;
-        margin:.1rem 0;
+        margin: .1rem 0;
         background-color: #fff;
     }
 }
