--- a/src/components/css/return-title.scss
+++ b/src/components/css/return-title.scss
@@ -7,12 +7,19 @@
     background-color: #3775F6;
     color: #fff;
     text-align: center;
-    img{
+    .left-img{
         position: absolute;
         top: .9rem;
         left: .5rem;
         width: 1.3rem;
         height: 1.3rem;
     }   
+    .right-img{
+        position: absolute;
+        top: .9rem;
+        right: .5rem;
+        width: 1.3rem;
+        height: 1.3rem;
+    }
         
 }
