--- a/src/pages/card/pages/leave-school/css/apply-process.scss
+++ b/src/pages/card/pages/leave-school/css/apply-process.scss
@@ -34,13 +34,20 @@
         width: 36%;
         height: 3.6rem;
         background-color: #EEF2F5;
-        border-radius: .2rem;
         line-height: 3.6rem;
         text-align: center;
         margin: 0 auto;
         position: relative;
+        transition: all 1s ease;
     }
-
+    .round {
+        border-radius: .5rem;
+    }
+       
+    .round:hover{
+        transform: translateX(-200%);
+    }
+    
     .down-arrow {
         width: 1.2rem;
         margin: 0 auto;
@@ -59,20 +66,6 @@
         border-top: .8rem solid #aaa;
     }
 
-    .process-round {
-        width: 36%;
-        height: 3.6rem;
-        border-radius: .5rem;
-        background-color:#EEF2F5;
-        margin: 0 auto;
-        line-height: 3.6rem;
-        text-align: center;
-        position: relative;
-        transition: all 1s ease;
-    }
-    .process-round:hover{
-        transform: translateX(-200%);
-    }
     .apply-detail{
         width: 100%;
         background-color: #2BB0EA;
