--- a/src/pages/list/List.scss
+++ b/src/pages/list/List.scss
@@ -32,13 +32,13 @@
     }
     .address-body{
         width: 100%;
-        transition: all 1s ease;
+        transition: all .6s ease;
         overflow: hidden;
     }
     .group-body{
         width: 0;
         overflow: hidden;
-        transition: all 1s ease;
+        transition: all .6s ease;
     }
 
 }
