optimize app structure

--- a/src/components/css/arrow-menu.scss
+++ b/src/components/css/arrow-menu.scss
@@ -19,7 +19,8 @@
     }
 
     .item-img {
-        margin-right: .5rem;
+        margin-top: .3rem;
+        margin-right: .8rem;
     }
 
     .item-arrow {
