--- a/src/components/css/text-row.scss
+++ b/src/components/css/text-row.scss
@@ -6,7 +6,7 @@
     padding: .5rem 0;
     background-color: #fff;
     display: flex;
-    margin: .1rem 0;
+    margin: .1rem auto;
 
     input {
         outline: none;
