--- a/src/pages/card/life/css/pay-center.scss
+++ b/src/pages/card/life/css/pay-center.scss
@@ -4,35 +4,16 @@
     position: absolute;
     top: 0;
     bottom: 0;
+    overflow-x: hidden;
     .paycenter-header{
-        font-size: 1.3rem;
-        height:1.8rem;
-        font-weight: 600;
-        padding: 0.6rem;
         background-color: #3775F6;
-        color: #fff;
-        text-align: center;
-        img{
-            position: absolute;
-            top: .9rem;
-            left: .5rem;
-            width: 1.3rem;
-            height: 1.3rem;
-        }
-        
     }
-    .body-swiper{
-        background-color: #3775F6;
+    .header-swiper{
         padding: 1rem 0 2rem 0;
-        border-radius: 0 0 2rem 2rem;
         margin-bottom: 2rem;
     }
     .paycenter-body{
         width: 100%;
-        
-    }
-    .body-content{
-
     }
     .body-item{
         display: flex;
