--- a/src/pages/list/css/divide-group-item.scss
+++ b/src/pages/list/css/divide-group-item.scss
@@ -4,6 +4,7 @@
     height: 3rem;
     transition: all 0.4s ease;
     background-color: #fff;
+    font-size: 1rem;
     .divide-group{
         height: 3rem;
         display: flex;
