--- a/src/pages/list/css/list.scss
+++ b/src/pages/list/css/list.scss
@@ -25,6 +25,7 @@
     }
     .body-tab-item {
         width: 50%;
+        font-size: 1rem;
         text-align: center;
     }
     .body-content{
