--- a/src/pages/message/css/send-message.scss
+++ b/src/pages/message/css/send-message.scss
@@ -6,15 +6,82 @@
     overflow-x: hidden;
     height: 100%;
     background-color: #FAFAFA;
-    .send-body{
-        height: calc(100% - 3.6rem - 3.4rem);
+
+    .send-header {
+        width: 100%;
+        border-bottom: solid .05rem #ccc;
+        position: fixed;
+        top: 0;
+        left: 0;
     }
+
+    .send-header-block {
+        height: 3.6rem;
+    }
+
+    .send-body {
+        // height: calc(100vh - 3.6rem - 3.4rem);
+    }
+
+    .message-box {
+        width: 100%;
+        margin-top: 1rem;
+    }
+
+    .message-item {
+        width: 100%;
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        margin: 1rem 0;
+        margin-right: .5rem;
+    }
+
+    .message-wrap {
+        max-width: 70%;
+        display: flex;
+        align-items: center;
+    }
+
+    .message-content {
+        background-color: #2E85FF;
+        border: solid .2rem #2E85FF;
+        padding: .5rem;
+        border-radius: .5rem;
+
+        img {
+            width: 4.8rem;
+            height: 4.8rem;
+        }
+    }
+
+    .message-tria {
+        border-style: solid;
+        border-width: .4rem 0 .4rem .5rem;
+        border-color: transparent transparent transparent #2E85FF;
+        margin-left: -.1rem;
+    }
+
+    .message-avator {
+        margin: 0 1rem 0 .5rem;
+
+        img {
+            width: 2.4rem;
+            height: 2.4rem;
+        }
+    }
+
+    .send-footer-block {
+        width: 100%;
+        height: 3.6rem;
+    }
+
     .send-footer {
         width: 100%;
         position: fixed;
         left: 0;
         right: 0;
-        bottom: 0;
+        bottom: -0.1rem;
         background-color: #f1f1f1;
         height: 2.4rem;
         transition: all .5s ease;
@@ -27,7 +94,7 @@
         display: flex;
         justify-content: space-around;
         align-items: center;
-        
+
         img {
             width: 1.5rem;
             height: 1.5rem;
@@ -36,6 +103,7 @@
 
     .send-input {
         width: 70%;
+
         input {
             width: 95%;
             outline: none;
@@ -46,21 +114,29 @@
         }
     }
 
-    .send-plus{
+    .send-plus {}
 
-    }
-    .plus-content{
+    .plus-content {
         display: flex;
         justify-content: space-around;
         flex-wrap: wrap;
-       
+
     }
-    .plus-item{
+
+    .upload-image {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        opacity: 0;
+    }
+
+    .plus-item {
         width: 25%;
         font-size: .8rem;
         text-align: center;
         margin-bottom: 1rem;
-        img{
+
+        img {
             width: 2rem;
             height: 2rem;
             margin-top: .2rem;
@@ -69,5 +145,5 @@
             border-radius: .6rem;
         }
     }
-    
+
 }
