修复列表页切换tab样式异异常

--- a/src/pages/list/css/list.scss
+++ b/src/pages/list/css/list.scss
@@ -39,18 +39,17 @@
 
     .body-content {
         display: flex;
+        white-space: nowrap;
+        overflow: hidden;
     }
 
     .address-body {
         width: 100%;
         transition: all .6s ease;
-        overflow: hidden;
     }
 
     .group-body {
         width: 0;
-        overflow: hidden;
         transition: all .6s ease;
     }
-
 }
