--- a/src/pages/message/css/message.scss
+++ b/src/pages/message/css/message.scss
@@ -1,5 +1,10 @@
 #Message {
+    width: 100%;
+    position: absolute;
     background-color: #FAFAFA;
+    overflow-x: hidden;
+    top: 2.5rem;
+    bottom: 0;
 
     .message-header {
         width: 100%;
