--- a/src/pages/card/entertainment/css/for-friend.scss
+++ b/src/pages/card/entertainment/css/for-friend.scss
@@ -1,5 +1,4 @@
 #ForFriend {
-
     width: 100%;
     background-color: #FAFAFA;
     position: absolute;
@@ -7,8 +6,6 @@
     bottom: 0;
     overflow: hidden;
 
-    // height: 200rem;
-    // transform: translateX();
     .fri-body {
         width: 100%;
         text-align: center;
@@ -20,13 +17,12 @@
         border-radius: 1rem;
         margin: 1rem auto;
         overflow: hidden;
-        // display: flex;
         position: relative;
 
         img {
             width: 90vw;
             border-radius: 1rem;
-            max-height: 26rem;
+            height: 26rem;
             transition: all 1s ease;
             position: absolute;
             left: 0;
@@ -36,28 +32,40 @@
 
     .button-content {
         width: 100%;
+        height: 2.5rem;
         display: flex;
         justify-content: center;
         position: absolute;
-        top: 26rem;
+        top: 21rem;
+        left: 0;
+        right: 0;
         z-index: 99;
 
         img {
             width: 2.4rem;
             height: 2.4rem;
             margin: 0 1.5rem;
+            position: static;
+            transition: all .1s ease;
+        }
+
+        img:hover {
+            transform: translateY(-1rem) rotate(15deg);
         }
     }
 
     .fri-footer {
         width: 100%;
         height: 3.6rem;
-        background-color: yellow;
+        background-color: #fff;
+        border-top: #ddd .05rem solid;
         position: fixed;
         bottom: 0;
     }
 
     .footer-tab {
+        width: 100%;
+        height: 3.6rem;
         display: flex;
     }
 
@@ -76,9 +84,3 @@
         font-size: .8rem;
     }
 }
-
-
-// .WrapDragger {
-//     width: 100%;
-//     height: 200rem !important;
-// }
