--- a/src/pages/card/entertainment/css/for-message.scss
+++ b/src/pages/card/entertainment/css/for-message.scss
@@ -4,7 +4,82 @@
     position: absolute;
     top: 0;
     bottom: 0;
-    overflow: hidden;
+    overflow-x: hidden;
+
+    .message-header {
+        width: 100%;
+        position: fixed;
+        top: 0;
+    }
+
+    .header-title {
+        display: flex;
+        justify-content: space-between;
+        padding: .5rem;
+        color: orangered;
+        background-color: #FAFAFA;
+
+        img {
+            width: 1.5rem;
+            height: 1.5rem;
+        }
+    }
+
+    .header-block {
+        width: 100%;
+        height: 6rem;
+    }
+
+    .message-box {
+        margin-top: .5rem;
+    }
+
+    .message-item {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        height: 3.6rem;
+        padding: .2rem .6rem;
+        background-color: #fff;
+        margin-bottom: .1rem;
+
+        .message-avator {
+            width: 18%;
+
+            img {
+                width: 3rem;
+                height: 3rem;
+                border-radius: 50%;
+            }
+        }
+
+        .message-info {
+            width: 60%;
+
+            .message-name {
+                font-size: 1.1rem;
+            }
+
+            .message-content {
+                margin-top: .3rem;
+                font-size: .6rem;
+                color: #aaa;
+            }
+        }
+
+        .message-time {
+            width: 20%;
+            font-size: .6rem;
+            color: #ccc;
+            margin-bottom: 1.6rem;
+            text-align: center;
+        }
+    }
+
+    .footer-block {
+        width: 100%;
+        height: 3.6rem;
+    }
 
     .message-footer {
         width: 100%;
