--- a/src/pages/card/life/css/food-delivery.scss
+++ b/src/pages/card/life/css/food-delivery.scss
@@ -7,11 +7,14 @@
         height: 6rem;
         position: fixed;
         top: 0;
+        z-index: 999;
+        background-color: #FAFAFA;
     }
 
     .header-block {
         width: 100%;
         height: 6rem;
+        background-color: #FAFAFA;
     }
 
     .delivery-body {
@@ -40,7 +43,7 @@
 
     .delivery-swiper-content {
         width: 100%;
-        margin-top: 1rem;
+        margin: 1rem 0;
     }
 
     .delivery-select-content {
@@ -81,6 +84,7 @@
 
         .delivery-select-item-pull {
             margin-top: .5rem;
+            color: orange;
 
             .delivery-select-item-pull-item {
                 height: 1.5rem;
@@ -94,7 +98,6 @@
     .delivery-shop-content {
         width: 95%;
         margin: .5rem auto;
-
     }
 
     .delivery-shop-content-item {
@@ -103,6 +106,7 @@
         background-color: #fff;
         border-radius: .5rem;
         padding: .5rem 0;
+        margin: .5rem 0;
 
         .delivery-shop-content-item-left {
             width: 20%;
@@ -113,7 +117,7 @@
             }
         }
 
-        .delivery-shop-content-item-middle {
+        .delivery-shop-content-item-right {
             flex: 1;
             margin: 0 .5rem;
 
@@ -141,8 +145,6 @@
                 justify-content: space-between;
             }
 
-            
-
             .shop-active {
                 color: #EC4141;
                 margin: .5rem 0;
@@ -155,9 +157,38 @@
                 }
             }
         }
-
-
     }
 
+    .delivery-footer-block {
+        width: 100%;
+        height: 5rem;
+    }
 
+    .delivery-footer {
+        width: 100%;
+        height: 3rem;
+        padding: .8rem 0 .5rem 0;
+        position: fixed;
+        bottom: 0;
+        background-color: #fff;
+        border-radius: .5rem;
+        z-index: 999;
+        border-top: #aaa .05rem solid;
+
+        .footer-tab-content {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+
+            .footer-tab-item {
+                font-size: .8rem;
+                text-align: center;
+
+                img {
+                    width: 1.8rem;
+                    height: 1.8rem;
+                }
+            }
+        }
+    }
 }
