--- a/src/pages/card/life/css/shop-item.scss
+++ b/src/pages/card/life/css/shop-item.scss
@@ -161,9 +161,13 @@
                         }
 
                         .food-item-add {
+                            display: flex;
+                            align-items: center;
+
                             img {
                                 width: 1.5rem;
                                 height: 1.5rem;
+                                margin: 0 .2rem;
                             }
                         }
                     }
@@ -185,25 +189,121 @@
 
     .shop-footer {
         width: 100%;
-        height: 3.6rem;
+        height: 3.2rem;
         background-color: #fff;
         position: fixed;
         bottom: 0;
         padding: .5rem;
         border-top: #aaa .05rem solid;
+        z-index: 2;
+        transition: all .5s ease;
+
+        .shop-footer-shopping-car-content {
+            width: 100%;
+            overflow-y: hidden;
+            height: 0;
+            transition: all .5s ease;
+
+            .car-title {
+                display: flex;
+                justify-content: space-between;
+                font-weight: bold;
+
+                .car-clear {
+                    font-size: .8rem;
+                    color: #bbb;
+                    margin-right: 1rem;
+
+                    img {
+                        width: .8rem;
+                        height: .8rem;
+                        margin: 0 .2rem;
+                    }
+                }
+            }
+
+            .car-item {
+                width: 100%;
+                display: flex;
+                margin-top: .8rem;
+                height: 4rem;
+
+                .car-item-left {
+                    width: 3.6rem;
+                    margin: 0 .5rem;
+
+                    img {
+                        width: 3.6rem;
+                        height: 3.6rem;
+                    }
+                }
+
+                .car-item-right {
+                    flex: 1;
+                    margin-left: .8rem;
+
+                    .car-item-name {
+                        font-weight: bold;
+                        margin-bottom: .6rem;
+                    }
+
+                    .car-item-info {
+
+                        display: flex;
+                        justify-content: space-between;
+
+                        .car-item-price {
+                            color: #eb0606;
+                        }
+
+                        .car-item-add {
+                            margin-right: .5rem;
+
+                            img {
+                                width: 1.5rem;
+                                height: 1.5rem;
+                                margin: 0 .5rem;
+                                vertical-align: middle;
+                            }
+                        }
+                    }
+                }
+            }
+        }
 
         .shop-footer-compute-content {
             display: flex;
             align-items: center;
+            height: 3.2rem;
 
             .compute-left {
                 width: 50%;
                 display: flex;
                 align-items: center;
 
-                img {
-                    width: 2rem;
-                    height: 2rem;
+                .shopping-car {
+                    position: relative;
+                    margin-top: .5rem;
+                    margin-right: .5rem;
+
+                    .shopping-car-count {
+                        width: 1.2rem;
+                        height: 1.2rem;
+                        background-color: #eb0606;
+                        border-radius: 50%;
+                        position: absolute;
+                        color: #fff;
+                        font-weight: bold;
+                        text-align: center;
+                        font-size: .8rem;
+                        top: -.5rem;
+                        right: -.5rem;
+                    }
+
+                    img {
+                        width: 2.4rem;
+                        height: 2.4rem;
+                    }
                 }
 
                 .total-money {
