外送结算页初步开发完成

--- a/src/pages/card/life/css/food-delivery.scss
+++ b/src/pages/card/life/css/food-delivery.scss
@@ -1,6 +1,7 @@
 #FoodDelivery {
     width: 100%;
     overflow-x: hidden;
+    background: #f1f2f3;
 
     .delivery-header {
         width: 100%;
