--- a/src/pages/message/css/send-message.scss
+++ b/src/pages/message/css/send-message.scss
@@ -65,7 +65,7 @@
         }
 
         .receive-message-wrap {
-            max-width: 90%;
+            max-width: 75vw;
             display: flex;
             align-items: center;
 
@@ -95,13 +95,22 @@
         width: 100%;
         display: flex;
         flex-direction: row-reverse;
-        align-items: center;
         margin: 1rem 0;
         margin-right: .5rem;
     }
 
+    .message-right {
+        .message-name {
+            margin: -.2rem 0 .2rem 0;
+            color: #aaa;
+            font-size: .75rem;
+            transform: scale(.8);
+            text-align: end;
+        }
+    }
+
     .message-wrap {
-        max-width: 70%;
+        max-width: 75vw;
         display: flex;
         align-items: center;
     }
@@ -126,7 +135,7 @@
     }
 
     .message-avator {
-        margin: 0 1rem 0 .5rem;
+        margin: 0 .5rem 0 .2rem;
 
         img {
             width: 2.4rem;
