优化清空购物车

--- a/src/pages/message/css/send-message.scss
+++ b/src/pages/message/css/send-message.scss
@@ -28,6 +28,7 @@
         width: 100%;
         text-align: center;
         color: #aaa;
+        font-size: .8rem;
     }
 
     .receive-message-box {
