--- a/src/pages/card/entertainment/css/anonymous-list.scss
+++ b/src/pages/card/entertainment/css/anonymous-list.scss
@@ -1,6 +1,6 @@
 #AnonymousList {
     .header-search {
-        background-color: #FAFAFA;
+        background-color: #f1f2f3;
         height: 3rem;
     }
 
