--- a/src/pages/card/entertainment/css/for-friend.scss
+++ b/src/pages/card/entertainment/css/for-friend.scss
@@ -1,6 +1,6 @@
 #ForFriend {
     width: 100%;
-    background-color: #FAFAFA;
+    background-color: #f1f2f3;
     position: absolute;
     top: 0;
     bottom: 0;
