--- a/src/pages/card/entertainment/css/for-message.scss
+++ b/src/pages/card/entertainment/css/for-message.scss
@@ -1,6 +1,6 @@
 #ForMessage {
     width: 100%;
-    background-color: #FAFAFA;
+    background-color: #f1f2f3;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -17,7 +17,7 @@
         justify-content: space-between;
         padding: .5rem;
         color: orangered;
-        background-color: #FAFAFA;
+        background-color: #f1f2f3;
 
         img {
             width: 1.5rem;
