--- a/src/pages/card/entertainment/css/for-send-message.scss
+++ b/src/pages/card/entertainment/css/for-send-message.scss
@@ -5,7 +5,7 @@
     bottom: 0;
     overflow-x: hidden;
     height: 100%;
-    background-color: #FAFAFA;
+    background-color: #f1f2f3;
 
     .send-header {
         width: 100%;
