--- a/src/pages/list/css/friend-action.scss
+++ b/src/pages/list/css/friend-action.scss
@@ -1,11 +1,12 @@
-#FriendAction{
+#FriendAction {
     width: 100%;
     position: absolute;
     top: 0;
     bottom: 0;
-    background-color: #FAFAFA;
+    background-color: #f1f2f3;
     overflow-x: hidden;
-    .am-list-content{
+
+    .am-list-content {
         font-size: 1rem;
         margin: 0 .5rem;
     }
