--- a/src/pages/mycenter/css/my-center.scss
+++ b/src/pages/mycenter/css/my-center.scss
@@ -1,6 +1,6 @@
 #MyCenter {
     width: 100%;
-    background-color: #FAFAFA;
+    background-color: #f1f2f3;
 
     .mycenter-header {
         height: 6rem;
