--- a/src/pages/mycenter/css/user-install.scss
+++ b/src/pages/mycenter/css/user-install.scss
@@ -1,11 +1,12 @@
-#UserInstall{
+#UserInstall {
     width: 100%;
     position: absolute;
     top: 0;
     bottom: 0;
-    background-color: #FAFAFA;
+    background-color: #f1f2f3;
     overflow-x: hidden;
-    .install-footer{
+
+    .install-footer {
         margin-top: 2rem;
     }
-}   
+}
