--- a/src/components/css/pull-down-menu.scss
+++ b/src/components/css/pull-down-menu.scss
@@ -1,5 +1,6 @@
 #PullDownMenu {
     font-size: 1rem;
+
     .menu-box {
         width: 100%;
         height: 4rem;
@@ -36,7 +37,7 @@
     .select-way-content {
         width: 100%;
         margin-top: -.5rem;
-        background-color: #FAFAFA;
+        background-color: #f1f2f3;
     }
 
     .select-way-item {
