--- a/src/pages/card/life/css/apply-process.scss
+++ b/src/pages/card/life/css/apply-process.scss
@@ -4,32 +4,38 @@
     top: 0;
     bottom: 0;
     overflow-x: hidden;
-    background-color: #FAFAFA;
-    .apply-header{
+    background-color: #f1f2f3;
+
+    .apply-header {
         background-color: #D22E2E;
     }
-    .apply-title{
+
+    .apply-title {
         color: #fff;
         padding: 1rem;
         font-weight: 500;
         animation: title-in 1s ease;
     }
+
     @keyframes title-in {
-        from{
+        from {
             transform: translateX(-100%);
         }
     }
+
     @keyframes body-in {
-        from{
+        from {
             transform: translateY(120%);
         }
     }
-    .apply-body{
+
+    .apply-body {
         width: 100%;
         margin: 2rem 0;
         color: #ccc;
         animation: body-in 1s ease;
     }
+
     .process-rect {
         width: 36%;
         height: 3.6rem;
@@ -40,14 +46,15 @@
         position: relative;
         transition: all 1s ease;
     }
+
     .round {
         border-radius: .5rem;
     }
-       
-    .round:hover{
+
+    .round:hover {
         transform: translateX(-200%);
     }
-    
+
     .down-arrow {
         width: 1.2rem;
         margin: 0 auto;
@@ -66,7 +73,7 @@
         border-top: .8rem solid #aaa;
     }
 
-    .apply-detail{
+    .apply-detail {
         width: 100%;
         background-color: #2BB0EA;
         padding: .5rem;
@@ -74,9 +81,10 @@
         top: 0;
         left: 200%;
         border-radius: .5rem;
-        
+
     }
-    .detail-item{
+
+    .detail-item {
         display: flex;
         justify-content: space-between;
         margin: .2rem 0;
