--- a/src/pages/card/life/css/food-delivery.scss
+++ b/src/pages/card/life/css/food-delivery.scss
@@ -9,13 +9,13 @@
         position: fixed;
         top: 0;
         z-index: 999;
-        background-color: #FAFAFA;
+        background-color: #f1f2f3;
     }
 
     .header-block {
         width: 100%;
         height: 6rem;
-        background-color: #FAFAFA;
+        background-color: #f1f2f3;
     }
 
     .delivery-body {
