--- a/src/pages/card/life/css/pay-delivery-order.scss
+++ b/src/pages/card/life/css/pay-delivery-order.scss
@@ -3,7 +3,7 @@
     position: absolute;
     top: 0;
     bottom: 0;
-    background-color: #FAFAFA;
+    background-color: #f1f2f3;
     overflow-x: hidden;
 
     .pay-info-content {
