--- a/src/pages/list/css/friend-info.scss
+++ b/src/pages/list/css/friend-info.scss
@@ -1,29 +1,34 @@
-#FriendInfo{
+#FriendInfo {
     width: 100%;
     position: absolute;
     top: 0;
     bottom: 0;
     overflow-x: hidden;
-    background-color: #FAFAFA;
-    .friend-base{
+    background-color: #f1f2f3;
+
+    .friend-base {
         height: 8rem;
         display: flex;
         align-items: center;
         padding: .5rem 2rem;
     }
-    .friend-avator{
-        img{
+
+    .friend-avator {
+        img {
             width: 5rem;
             height: 5rem;
         }
     }
-    .friend-intro{
+
+    .friend-intro {
         margin-left: 1rem;
     }
-    .friend-name{
+
+    .friend-name {
         font-size: 1.4rem;
     }
-    .friend-number{
+
+    .friend-number {
         color: #aaa;
     }
 }
