--- a/src/pages/message/css/message.scss
+++ b/src/pages/message/css/message.scss
@@ -1,7 +1,7 @@
 #Message {
     width: 100%;
     position: absolute;
-    background-color: #FAFAFA;
+    background-color: #f1f2f3;
     overflow-x: hidden;
     top: 2.5rem;
     bottom: 0;
