--- a/src/pages/message/css/search-chat-content.scss
+++ b/src/pages/message/css/search-chat-content.scss
@@ -1,8 +1,13 @@
-#PayCard {
+#SearchChatContent {
     width: 100%;
     position: absolute;
     top: 0;
     bottom: 0;
     overflow-x: hidden;
     background-color: #f1f2f3;
+
+    .search-bar-content {
+        width: 100%;
+        height: 4.8rem;
+    }
 }
