--- a/src/pages/message/css/search-chat-content.scss
+++ b/src/pages/message/css/search-chat-content.scss
@@ -10,4 +10,30 @@
         width: 100%;
         height: 4.8rem;
     }
+
+    .search-nav-content {
+        margin: 2rem 0;
+
+        .search-nav-title {
+            text-align: center;
+            font-size: .75rem;
+            color: #aaa;
+            margin: 1rem 0;
+        }
+
+        .search-nav-item {
+            width: 100%;
+            display: flex;
+            flex-wrap: wrap;
+            text-align: center;
+            font-size: .9rem;
+            margin-top: 2.4rem;
+            color: #121fdd;
+
+            span {
+                width: 33.3vw;
+                margin: 1rem 0;
+            }
+        }
+    }
 }
