朋友圈页基本开发完成

--- a/src/pages/card/entertainment/css/for-friend.scss
+++ b/src/pages/card/entertainment/css/for-friend.scss
@@ -49,7 +49,7 @@
             transition: all .1s ease;
         }
 
-        img:hover {
+        img:active {
             transform: translateY(-1rem) rotate(15deg);
         }
     }
