--- a/src/pages/mycenter/css/my-center.scss
+++ b/src/pages/mycenter/css/my-center.scss
@@ -66,7 +66,7 @@
 
     .mycenter-card-title {
         font-weight: 600;
-        margin-left: 1rem;
+        margin: 1rem 0 0 1rem;
     }
 
     .mycenter-card-content {
