--- a/src/pages/message/css/send-message.scss
+++ b/src/pages/message/css/send-message.scss
@@ -52,6 +52,12 @@
             line-height: 2.4rem;
             font-weight: 600;
             font-size: 1.6rem;
+
+            img {
+                width: 2.4rem;
+                height: 2.4rem;
+                border-radius: 50%;
+            }
         }
 
         .receive-message-right {
