--- a/src/pages/mycenter/css/todo-list.scss
+++ b/src/pages/mycenter/css/todo-list.scss
@@ -5,11 +5,23 @@
     bottom: 0;
     overflow-x: hidden;
     background-color: #fff;
+    z-index: 2;
 
     .todo-list-title {
         font-size: 1.4rem;
         color: #ff9100;
         margin: .5rem 1rem 1rem 1rem;
+    }
+
+    .overflow-black {
+        width: 100%;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        background-color: #000;
+        z-index: 2;
+        display: none;
+        opacity: .8;
     }
 
     .todo-list-body {
@@ -60,4 +72,155 @@
             }
         }
     }
+
+    @keyframes center-scale {
+        from {
+            transform: scale(0, 0);
+        }
+    }
+
+    .add-todo-item-content {
+        width: 80vw;
+        height: 60vh;
+        position: fixed;
+        margin: auto;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 20vh;
+        background-color: #f1f2f3;
+        z-index: 3;
+        border-radius: .8rem;
+        animation: center-scale .8s ease;
+        display: none;
+
+        .add-todo-title {
+            width: 100%;
+            text-align: center;
+            margin: 1rem 0 .5rem 0;
+            color: #ff9100;
+        }
+
+        .add-todo-text-content {
+            margin: 1.5rem 0;
+
+            .add-todo-item {
+                font-size: .8rem;
+                display: flex;
+                justify-content: space-between;
+                margin: 0 1rem;
+                height: 2.4rem;
+                align-items: center;
+                border-bottom: #ddd .05rem solid;
+
+                input {
+                    border: none;
+                    outline: none;
+                    text-align: end;
+                    padding: 0 1rem;
+                }
+            }
+        }
+
+        .add-todo-button-content {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+
+            div {
+                width: 6rem;
+                height: 2rem;
+                line-height: 2rem;
+                border-radius: .5rem;
+                text-align: center;
+                background-color: #fff;
+                margin: 0 1rem;
+            }
+
+            .add-button {
+                color: #ff9100;
+            }
+
+            .cancel-button {
+                color: red;
+            }
+        }
+    }
+
+    .todo-list-footer-block {
+        width: 100%;
+        height: 3rem;
+    }
+
+    .todo-list-footer {
+        color: #ff9100;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        height: 3rem;
+        background-color: #fff;
+
+        span {
+            vertical-align: middle;
+        }
+
+        img {
+            width: 1.2rem;
+            height: 1.2rem;
+            margin: 0 .5rem 0 1.2rem;
+            vertical-align: middle;
+        }
+    }
+}
+
+// 覆盖antd-mobile样式
+.am-list-item,
+.am-list-line,
+.am-list-content {
+    font-size: .8rem !important;
+    height: 2.4rem !important;
+    min-height: auto !important;
+    border-bottom: none !important;
+    padding-bottom: 0 !important;
+    flex-basis: 50% !important;
+}
+
+.am-list-content {
+    line-height: 2.4rem !important;
+}
+
+.am-list-body {
+    width: 100% !important;
+}
+
+.am-list-extra {
+    font-size: .75rem !important;
+    flex-basis: 50% !important;
+}
+
+.am-switch-checkbox {
+    width: 2rem !important;
+    height: 1rem !important;
+}
+
+.checkbox {
+    width: 2rem !important;
+    height: 1.2rem !important;
+}
+
+.am-switch .checkbox:before {
+    width: 1.2rem !important;
+    height: 1.2rem !important;
+}
+
+.am-switch .checkbox:after {
+    width: 1.2rem !important;
+    height: 1.2rem !important;
+    top: 0 !important;
+}
+
+.am-list-arrow,
+.am-list-arrow-horizontal {
+    width: .625rem !important;
+    height: .625rem !important;
 }
