--- a/src/pages/card/life/css/food-delivery.scss
+++ b/src/pages/card/life/css/food-delivery.scss
@@ -62,6 +62,7 @@
         height: 2.4rem;
         transition: all .5s ease;
         overflow: hidden;
+        font-size: .8rem;
 
         .delivery-select-item-title {
             width: 100%;
@@ -173,13 +174,13 @@
 
     .delivery-footer-block {
         width: 100%;
-        height: 5rem;
+        height: 4rem;
     }
 
     .delivery-footer {
         width: 100%;
-        height: 3rem;
-        padding: .8rem 0 .5rem 0;
+        height: 3.2rem;
+        padding-top: .2rem;
         position: fixed;
         bottom: 0;
         background-color: #fff;
@@ -197,8 +198,8 @@
                 text-align: center;
 
                 img {
-                    width: 1.8rem;
-                    height: 1.8rem;
+                    width: 1.4rem;
+                    height: 1.4rem;
                 }
             }
         }
