--- a/src/pages/card/entertainment/css/for-mine.scss
+++ b/src/pages/card/entertainment/css/for-mine.scss
@@ -6,6 +6,91 @@
     bottom: 0;
     overflow: hidden;
 
+    .mine-body {
+        width: 100%;
+
+        .mine-info {
+            height: 15rem;
+            background-color: #FC5531;
+            text-align: center;
+
+            img {
+                width: 6rem;
+                height: 6rem;
+                border-radius: 50%;
+                margin: 1.2rem 0;
+            }
+
+            .mine-name {
+                margin-bottom: 1rem;
+                color: #fff;
+                font-size: 1.2rem;
+            }
+
+            .mine-edit {
+                display: flex;
+                background-color: rgba($color: #000000, $alpha: .5);
+                width: 5rem;
+                padding: .4rem;
+                border-radius: .5rem;
+                margin: 0 auto;
+                font-size: .8rem;
+                text-align: center;
+                color: #fff;
+
+                img {
+                    width: 1rem;
+                    height: 1rem;
+                    margin: 0 .2rem;
+                }
+            }
+        }
+
+        .mine-count {
+            width: 100%;
+            background-color: #fff;
+            display: flex;
+            justify-content: space-between;
+
+            .count-item {
+                width: 25%;
+                text-align: center;
+                padding: 1.2rem 0;
+
+                .count-item-number {
+                    margin: .1rem 0;
+                }
+
+                .count-item-text {
+                    color: #aaa;
+                    font-size: .9rem;
+                }
+            }
+        }
+
+        .publish-image {
+            width: 90%;
+            margin: .5rem auto;
+            border: #FC5531 .05rem solid;
+            color: #FC5531;
+            text-align: center;
+            padding: .5rem 0;
+            background-color: #fff;
+            border-radius: .8rem;
+
+            span {
+                vertical-align: middle;
+                margin: 0 .2rem;
+            }
+
+            img {
+                width: 1.2rem;
+                height: 1.2rem;
+                vertical-align: middle;
+            }
+        }
+    }
+
     .mine-footer {
         width: 100%;
         height: 3.6rem;
